# tvscreener

./: Dockerfile  MANIFEST.in  MONITORING_PLAN.md  README.md  a.csv  monitor_app.py  pyproject.toml  requirements.txt  setup.cfg
tests/: test_monitoring.py
tvscreener/: __init__.py
tvscreener/field/: stock.py
tvscreener/monitoring/: __init__.py  analytics.py  app.py  db.py  models.py  service.py  settings.py
tvscreener/monitoring/templates/: index.html
