[metadata]
name = tvscreener
version = attr: tvscreener.__version__
description = TradingView Screener API
long_description = file: README.md
long_description_content_type = text/markdown
author = House of AI
license = MIT
url = https://github.com/houseofai/tvscreener
keywords = finance, tradingview, technical-analysis
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    requests>=2.27.1
    jinja2
    fastapi>=0.110.0
    uvicorn[standard]
    pydantic-settings>=2.0
    pydantic>=2.0
    python-dotenv

include_package_data = True

[options.packages.find]
include = tvscreener*
exclude = notebooks, scripts, tests

[options.package_data]
tvscreener.monitoring = templates/*.html
